--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "husky": "^0.14.3",
     "lerna": "^2.11.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
