--- a/projects/node-app/package.json
+++ b/projects/node-app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest __tests__"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,12 @@
     "@lnmunhoz/common-a": "^1.1.3",
     "@lnmunhoz/common-b": "^1.0.4",
     "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "jest": "^23.4.1"
+  },
+  "jest": {
+    "verbose": true,
+    "testEnvironment": "node"
   }
 }
