chore: add build script

--- a/projects/node-app/package.json
+++ b/projects/node-app/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "yarn install",
     "test": "jest __tests__"
   },
   "keywords": [],
